# jdvrif-rs

./: Cargo.toml  README.md
demo_image/: help.txt  java.txt  test.txt
src/: cli.rs  common.rs  conceal.rs  conceal_helpers.rs  conceal_segments.rs  constants.rs  crypto.rs  decrypt.rs  decrypt_kdf.rs  decrypt_pin.rs  decrypt_stream.rs  extract.rs  jpeg_preprocess.rs  main.rs  output_file.rs  paths.rs  recover.rs  recover_modes.rs  recover_output.rs  runtime.rs  signal.rs
src/decrypt/: kdf.rs  mod.rs  pin.rs  stream.rs
src/recover/: mod.rs  modes.rs  output.rs
